Fix broken style rules for UCORE course lists
Tweak style rules to compensate for breaking changes made to the WSU-UE---CSS submodule

--- a/CSS/ucore-custom.less
+++ b/CSS/ucore-custom.less
@@ -274,10 +274,12 @@ header.main-header {
 
 .course-lists {
 	& > li {
+		background-color: @hex-white;
+		border-radius: 4px;
 		float: left;
-		width: 49%;
-		min-height: 198px;
 		margin-bottom: 2%;
+		min-height: 198px;
+		width: 49%;
 		& { box-shadow: 2px 3px 8px @rgba; .getRgbaStr(@hex-black, 0.5); }
         @media all and (max-width: @column-floating-threshold) {
             width: 98%;
@@ -334,16 +336,17 @@ header.main-header {
 			}
 		}
 		& > h5 {
-			padding-right: (@v-dflt-spcng / 4);
-			padding-left: (@v-dflt-spcng / 4);
-			.rgb-accent-green(); background-color: rgba(@rval, @gval, @bval, 0.33);
+			.rgb-accent-green();
+			background-color: rgba(@rval, @gval, @bval, 0.33);
 			color: @hex-dark-green;
+			padding-left: (@v-dflt-spcng / 4);
+			padding-right: (@v-dflt-spcng / 4);
 		}
 		& > p {
 			font-size: inherit !important;
-			text-align: left;
-			padding-right: (@v-dflt-spcng / 4);
 			padding-left: (@v-dflt-spcng / 4);
+			padding-right: (@v-dflt-spcng / 4);
+			text-align: left;
 			& + ul,
 			& + ol {
 				margin-top: (@v-btm-mrgns * 1 / 3) !important;
